# engine

./: CMakeLists.txt  README.md  build.bat  build_and_run.bat  meson.build  start_cmd.bat
.github/workflows/: blank.yml
Engine/: CMakeLists.txt
Engine/include/Camera/: Camera2D.hpp
Engine/include/Collision/: CollisionSystem.hpp
Engine/include/GLHelpers/: GlHelper.hpp
Engine/include/GUI/: GuiManager.hpp  RenderInterface.hpp  SystemInterface.hpp
Engine/include/Global/: Components.hpp  Game.hpp  glPortableHeaders.hpp
Engine/include/Global/Time/: Time.hpp
Engine/include/Global/Utilities/: Logger.hpp  RGBA.hpp
Engine/include/Input/: InputContext.hpp  InputContextParser.hpp  InputHandler.hpp  InputManager.hpp  InputStructures.hpp  SDLInputHandler.hpp
Engine/include/Physics/: Integration.hpp  IntegrationSystem.hpp  PhysicsComponents.hpp
Engine/include/Rendering/: BaseRender.hpp  Renderable.hpp  RenderingComponents.hpp  RenderingStructures.hpp  Shader.hpp  ShaderManager.hpp  SpriteRender.hpp  SpriteRendering.hpp  TextureManager.hpp
Engine/include/Resources/: InputContextParser.hpp  ResourceHandler.hpp
Engine/include/Scene/: Scene.hpp
Engine/include/Windowing/: Window.hpp
Engine/src/GUI/: GuiManager.cpp  RenderInterface.cpp  SystemInterface.cpp
Engine/src/Input/: InputContext.cpp  InputContextParser.cpp  InputHandler.cpp  InputManager.cpp  SDLInputHandler.cpp
Engine/src/Physics/: Integration.cpp  IntegrationSystem.cpp
Engine/src/Rendering/: Renderable.cpp  Shader.cpp  ShaderManager.cpp  SpriteRender.cpp  SpriteRendering.cpp  TextureManager.cpp
Engine/src/Resources/: InputContextParser.cpp  ResourceHandler.cpp
Engine/src/Windowing/: Window.cpp
Game/: CMakeLists.txt
Game/include/: Ball.hpp  Block.hpp  GameComponents.hpp  GameState.hpp  Paddle.hpp  PaddleGame.hpp  PlayingGameState.hpp  TestScene.hpp
Game/src/: Ball.cpp  Block.cpp  GameState.cpp  Paddle.cpp  PaddleGame.cpp  PlayingGameState.cpp  TestScene.cpp
apps/: CMakeLists.txt  main.cpp
data/: Input.ini  Input.xml
data/scripts/: test.lua
data/scripts/shaders/: sprite.glsl
data/shaders/: debug.glsl  dynamicSprite.glsl  staticSprite.glsl
data/ui/: hello_world.rml  rml.rcss  window.rcss
include/: Components.hpp  RGBA.hpp  Shader.hpp  ShaderManager.hpp  Time.hpp  Window.hpp
include/Engine/Collision/: CollisionComponents.hpp  CollisionSystem.hpp
include/Engine/Global/: Components.hpp  Game.hpp  GameEventBus.hpp  glPortableHeaders.hpp
include/Engine/Global/Utilities/: RGBA.hpp
include/Engine/Input/: InputHandler.hpp  InputStructures.hpp
include/Engine/Physics/: IntegrationSystem.hpp  PhysicsComponents.hpp
include/Engine/Rendering/: BaseRender.hpp  Renderable.hpp  RenderingComponents.hpp  Shader.hpp  ShaderManager.hpp  SpriteRender.hpp
include/Engine/Scene/: Scene.hpp
include/Engine/Windowing/: Window.hpp
include/Game/: Ball.hpp  Block.hpp  GameComponents.hpp  Paddle.hpp  PaddleGame.hpp  TestScene.hpp
include/Input/: InputHandler.hpp  InputStructures.hpp
include/Renderer/: Quad.hpp  Renderable.hpp
include/Systems/: BallSystem.hpp  BaseRender.hpp  CollisionSystem.hpp  IntegrationSystem.hpp  PlayerSystem.hpp  SpriteRender.hpp
include/glad/: gl.h  glad.h
install/lib/: Engine.lib
notes/: Breakout clone.md
notes/.obsidian/: workspace
notes/notes/: Engine - 20210809.md
notes/notes/.obsidian/: workspace
src/: Scene.cpp  Shader.cpp  ShaderManager.cpp  Window.cpp  main.cpp
src/Engine/Collision/: CollisionSystem.cpp
src/Engine/Input/: InputHandler.cpp
src/Engine/Physics/: IntegrationSystem.cpp
src/Engine/Rendering/: Renderable.cpp  Shader.cpp  ShaderManager.cpp  SpriteRender.cpp
src/Engine/Scene/: Scene.cpp
src/Engine/Windowing/: Window.cpp
src/Game/: Ball.cpp  Block.cpp  Paddle.cpp  PaddleGame.cpp  TestScene.cpp
src/Input/: InputHandler.cpp
src/Renderer/: Renderable.cpp
src/Systems/: BallSystem.cpp  CollisionSystem.cpp  IntegrationSystem.cpp  PlayerSystem.cpp  SpriteRender.cpp
subprojects/engine/: meson.build
subprojects/engine/include/: Components.hpp  DLLEXPORT.hpp  RGBA.hpp  Scene.hpp  Sprite.hpp  Window.hpp
subprojects/engine/include/Components/: Position2D.hpp  Rotation2D.hpp  Scale2D.hpp  SpriteShader.hpp  Texture2D.hpp  Velocity2D.hpp
subprojects/engine/include/Renderer/: Renderable.hpp
subprojects/engine/include/Systems/: BaseRender.hpp  SpriteRender.hpp
subprojects/engine/src/: Texture2D.cpp  Window.cpp  glad.cpp
subprojects/engine/src/Components/: SpriteShader.cpp  Texture2D.cpp
subprojects/engine/src/Systems/: SpriteRender.cpp
